--- a/index.html
+++ b/index.html
@@ -85,6 +85,13 @@
             padding-bottom: 2rem;
         }
         
+        .roaster-logo-image {
+            width: 150px;
+            height: auto;
+            display: block;
+            margin: 0 auto 1rem;
+        }
+        
         .logo {
             font-size: 5rem;
             font-weight: 700;
@@ -218,6 +225,8 @@
     <div class="container">
         <header>
             <div>
+                <!-- Image added here -->
+                <img src="x (62).png" alt="Roaster logo image" class="roaster-logo-image">
                 <h1 class="logo">ROASTER</h1>
                 <p class="tagline">Generate a random roast and share it with your crypto community to laugh together. Or cry.
                     <!-- Insert the Twitter/X link here. -->
