--- a/index.html
+++ b/index.html
@@ -226,12 +226,12 @@
         <header>
             <div>
                 <!-- Image added here -->
-                <img src="xlogo.png" alt="Roaster logo image" class="roaster-logo-image">
+                <img src="x(62)o.png" alt="Roaster logo image" class="roaster-logo-image">
                 <h1 class="logo">ROASTER</h1>
                 <p class="tagline">Generate a random roast and share it with your crypto community to laugh together. Or cry.
                     <!-- Insert the Twitter/X link here. -->
                     <a href="https://twitter.com/your-profile" target="_blank" class="social-link">
-                        <img src="xlogo" alt="X (Twitter) Icon">
+                        <img src="xlogo.png" alt="X (Twitter) Icon">
                     </a>
                 </p>
             </div>
