--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
         <header>
             <div>
                 <!-- Image added here -->
-                <img src=")x (62).png" alt="Roaster logo image" class="roaster-logo-image">
+                <img src="x (62).png" alt="Roaster logo image" class="roaster-logo-image">
                 <h1 class="logo">ROASTER</h1>
                 <p class="tagline">Generate a random roast and share it with your crypto community to laugh together. Or cry.
                     <!-- Insert the Twitter/X link here. -->
