--- a/index.html
+++ b/index.html
@@ -401,18 +401,18 @@
 </head>
 <body>
     <!-- Floating meme characters in the background -->
-    <img src="x (62).png" alt="Trollface meme" class="background-meme" style="top: 10%; left: 5%;">
-    <img src="x (62).png" alt="Feels good man meme" class="background-meme" style="top: 30%; left: 80%;">
-    <img src="x (62).png" alt="Doge meme" class="background-meme" style="top: 55%; left: 15%;">
-    <img src="x (62).png" alt="Okay guy meme" class="background-meme" style="top: 75%; left: 60%;">
-    <img src="x (62).png" alt="Pepe the frog meme" class="background-meme" style="top: 20%; left: 45%;">
-    <img src="x (62).png" alt="Big brain meme" class="background-meme" style="top: 85%; left: 30%;">
-    <img src="x (62).png" alt="Surprised Pikachu meme" class="background-meme" style="top: 40%; left: 90%;">
-    <img src="x (62).png" alt="Think about it meme" class="background-meme" style="top: 60%; left: 50%;">
-    <img src="x (62).png" alt="Woman yelling at a cat meme" class="background-meme" style="top: 5%; left: 70%;">
-    <img src="x (62).png" alt="Woman yelling at a cat meme" class="background-meme" style="top: 90%; left: 10%;">
-    <img src="x (62).png" alt="Woman yelling at a cat meme" class="background-meme" style="top: 25%; left: 25%;">
-    <img src="x (62).png" alt="Woman yelling at a cat meme" class="background-meme" style="top: 70%; left: 40%;">
+    <img src="x (62).png" alt="Roaster logo image" class="background-meme" style="top: 10%; left: 5%;">
+    <img src="x (62).png" alt="Roaster logo image" class="background-meme" style="top: 30%; left: 80%;">
+    <img src="x (62).png" alt="Roaster logo image" class="background-meme" style="top: 55%; left: 15%;">
+    <img src="x (62).png" alt="Roaster logo image" class="background-meme" style="top: 75%; left: 60%;">
+    <img src="x (62).png" alt="Roaster logo image" class="background-meme" style="top: 20%; left: 45%;">
+    <img src="x (62).png" alt="Roaster logo image" class="background-meme" style="top: 85%; left: 30%;">
+    <img src="x (62).png" alt="Roaster logo image" class="background-meme" style="top: 40%; left: 90%;">
+    <img src="x (62).png" alt="Roaster logo image" class="background-meme" style="top: 60%; left: 50%;">
+    <img src="x (62).png" alt="Roaster logo image" class="background-meme" style="top: 5%; left: 70%;">
+    <img src="x (62).png" alt="Roaster logo image" class="background-meme" style="top: 90%; left: 10%;">
+    <img src="x (62).png" alt="Roaster logo image" class="background-meme" style="top: 25%; left: 25%;">
+    <img src="x (62).png" alt="Roaster logo image" class="background-meme" style="top: 70%; left: 40%;">
 
     <div class="sticky-nav">
         <a href="#lore">Lore</a>
