--- a/index.html
+++ b/index.html
@@ -507,17 +507,17 @@
                 <h2>Our Degenerate Team</h2>
                 <div class="team-grid">
                     <div class="team-member">
-                        <img src="https://i.imgflip.com/6c0b5f.png" alt="Meme Lord" title="The ultimate Roast Master" />
+                        <img src="https://s13emagst.akamaized.net/products/63529/63528627/images/res_81684052ac841796d7fd2027ef4d93d0.jpg">
                         <h3>Meme Lord</h3>
                         <p>Lead Roaster & Chief Meme Officer. Fluent in GIF, dreams in Dogecoin.</p>
                     </div>
                     <div class="team-member">
-                        <img src="https://i.imgflip.com/2s46u8.png" alt="The Architect" title="Solidity Guru" />
+                        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSIXXCjzyDZSqAq2pOOq76mjg3IBqKdnWqrcQ&s">
                         <h3>The Architect</h3>
                         <p>Smart Contract Dev. Finds joy in debugging Solidity and chaos.</p>
                     </div>
                     <div class="team-member">
-                        <img src="https://i.imgflip.com/83p14.png" alt="The Hype Engine" title="Community Hype Master" />
+                        <img src="https://e7.pngegg.com/pngimages/635/894/png-clipart-laughing-man-art-rage-comic-internet-meme-trollface-humour-meme-comics-face.png">
                         <h3>The Hype Engine</h3>
                         <p>Community Manager. Has a PhD in shitposting and community engagement.</p>
                     </div>
