--- a/index.html
+++ b/index.html
@@ -430,7 +430,7 @@
                 <p class="tagline">Generate a random roast and share it with your crypto community to laugh together. Or cry.
                     <!-- X/Twitter link here. -->
                     <a href="https://twitter.com/Roaster_Memecoin" target="_blank" class="social-link">
-                        <img src="https://img.icons8.com/color/48/twitter--v1.png" alt="X (Twitter) Icon">
+                        <img src="xlogo.png" alt="X (Twitter) Icon">
                     </a>
                 </p>
             </div>
