--- a/index.html
+++ b/index.html
@@ -419,8 +419,10 @@
         <a href="#roast-generator">Generator</a>
         <a href="#roadmap">Roadmap</a>
         <a href="#team">Team</a>
-    </div>
-
+    <div id="token-address-box" class="nav-token-address-box">
+            <p id="token-address" class="token-address"><span class="token-address-ca">CA:</span> xxxxxxxxxxxxxxxxxxxxxxxxxxxx</p>
+        </div>
+        
     <div class="container">
         <header>
             <div>
