--- a/index.html
+++ b/index.html
@@ -398,6 +398,25 @@
             text-align: center;
             text-shadow: 1px 1px 2px rgba(255,255,255,0.5);
         }
+        #dexscreener-embed {
+            position: relative;
+            width: 100%;
+            padding-bottom: 125%;
+            margin-top: 20px;
+        }
+        @media (min-width: 1400px) {
+            #dexscreener-embed {
+                padding-bottom: 65%;
+            }
+        }
+        #dexscreener-embed iframe {
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            top: 0;
+            left: 0;
+            border: 0;
+        }
     </style>
 </head>
 <body>
