--- a/index.html
+++ b/index.html
@@ -544,6 +544,9 @@
                 </div>
             </section>
         </main>
+         <div id="dexscreener-embed">
+        <iframe src="https://dexscreener.com/solana/7UJJ3QnfoC7RvpaLhCruhhFahksHbvUdDNAh1wfDW6R7?embed=1&loadChartSettings=0&chartLeftToolbar=0&chartTheme=dark&theme=dark&chartStyle=0&chartType=usd&interval=15"></iframe>
+    </div>
 
         <footer>
             <p>&copy; 2025 $ROASTER. All rights reserved. The community is the real utility.</p>
