--- a/index.html
+++ b/index.html
@@ -545,7 +545,7 @@
             </section>
         </main>
          <div id="dexscreener-embed">
-        <iframe src="https://dexscreener.com/solana/7UJJ3QnfoC7RvpaLhCruhhFahksHbvUdDNAh1wfDW6R7?embed=1&loadChartSettings=0&chartLeftToolbar=0&chartTheme=dark&theme=dark&chartStyle=0&chartType=usd&interval=15"></iframe>
+        <iframe src="Coming Soon!"></iframe>
     </div>
 
         <footer>
