--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
             --header-bg: #fff;
         }
 
+        /* Smooth scroll for anchor links */
+        html {
+            scroll-behavior: smooth;
+        }
+
         /* Navigation bar at the top */
         .sticky-nav {
             position: sticky;
@@ -398,24 +403,26 @@
             text-align: center;
             text-shadow: 1px 1px 2px rgba(255,255,255,0.5);
         }
+
+        /* --- Dexscreener embed (responsive box) --- */
         #dexscreener-embed {
             position: relative;
             width: 100%;
             padding-bottom: 125%;
             margin-top: 20px;
         }
-        @media (min-width: 1400px) {
-            #dexscreener-embed {
-                padding-bottom: 65%;
+        @media(min-width:1400px){
+            #dexscreener-embed{
+                padding-bottom:65%;
             }
         }
-        #dexscreener-embed iframe {
-            position: absolute;
-            width: 100%;
-            height: 100%;
-            top: 0;
-            left: 0;
-            border: 0;
+        #dexscreener-embed iframe{
+            position:absolute;
+            width:100%;
+            height:100%;
+            top:0;
+            left:0;
+            border:0;
         }
     </style>
 </head>
@@ -439,6 +446,8 @@
         <a href="#roast-generator">Generator</a>
         <a href="#roadmap">Roadmap</a>
         <a href="#team">Team</a>
+        <!-- 🔥 ÚJ: Chart link -->
+        <a href="#chart">Chart</a>
         </div>
         
     <div class="container">
@@ -543,10 +552,17 @@
                     </div>
                 </div>
             </section>
+
+            <!-- 🔥 ÚJ: Chart szekció (üres placeholder iframe) -->
+            <section id="chart" class="section">
+                <h2>Live Chart</h2>
+                <div id="dexscreener-embed">
+                    <!-- Kezdetben ÜRES: src="" – ide írd majd a Dexscreener URL-t, amikor készen áll -->
+                    <iframe src="" title="Dexscreener Chart Placeholder"></iframe>
+                </div>
+                <p style="color:#333; text-align:center; margin-top:12px;">📊 Chart coming soon... Update the iframe <code>src</code> with your Dexscreener embed URL to show live data.</p>
+            </section>
         </main>
-         <div id="dexscreener-embed">
-        <iframe src="Coming Soon!"></iframe>
-    </div>
 
         <footer>
             <p>&copy; 2025 $ROASTER. All rights reserved. The community is the real utility.</p>
